  (#3557453 Matthieu Casanova)

- Updated ColdFusion mode (#3518536, #3561048 Darien Brown)

- Updated Verilog mode (#3536967 Steve snarum-micron)

- Updated HTML mode (#3594526 Marc Häfner)

- Updated CSS mode (#3595041 Marc Häfner)

- Updated Coffeescript mode (#3595105 Marc Häfner)

- new PostgreSQL mode (feature #2833378 Thiemo Kellner, Eric Le Lay)

}}}
{{{ UI

- Initial view hidden by other windows at startup (#3610089)

- Remove empty root node in OptionGroupPane (#3608324, #3608327: Marco Hunsicker)

- More accurate treatment of ALT_KEY_PRESSED_DISABLED (#3604532: Makarius)

- New view option: "Abbreviate paths with environment variables when possible". 
  (#3606329 Alan Ezust)

- Made view option, "alternate toolbar placement" the default for jEdit. 

- Emacs macros and keymap updates. (Brian Clapper)

- Use separate (shorter) label for "whole word search" in the search bar.
  (Shlomy Reinstein)

- Added a right click popup menu with a copy action in the Error dialog
  (#3557023 Matthieu Casanova)

- Avoid trouble with horizontal scrolling (Patch #3134788, EdorFaus)

- Enable ContextMenu via keyboard to VFS-BrowserView (#3560239, Thomas Meyer)

- Added a possibility to suppress synchronization of the filter in search
  dialog, using a hidden setting in jedit.props: search.dontSyncFilter.
  (Jarek Czekalski)

- Added mnemonics for popup menus in File System Browser (Commands, Plugins,
  Favorites). (Jarek Czekalski)

}}}
{{{ Miscellaneous

- Added chinese translation (patch #3611777 - cnvince)

- Made the plugin manager loading much faster (up to 3 time faster)
  (Matthieu Casanova)

- New macro in Files section: "Open Selection In Desktop" (Jarek Czekalski)

- Open Selection macro improvements. An attempt is made to use current
  VFS browser directory as a parent for the highlighted filename.
  In case of no selection the path under caret is used. (Jarek Czekalski)

- Fixed unreasonable quadratic operations which could be observable on