@@ -193,6 +193,9 @@ Makarius, Marco Hunsicker, and Maik Nijhuis for contributing to this release.
 }}}
 {{{ UI
 
+- Better information in the plugin manager when loading plugin list
+  (Matthieu Casanova)
+
 - Initial view hidden by other windows at startup (#3610089)
 
 - Remove empty root node in OptionGroupPane (#3608324, #3608327: Marco Hunsicker)
